tool: add eslint + prettier

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -28,6 +28,18 @@ import { SITE } from "@consts";
         <Link href="/projects">
           projects
         </Link>
+        <span>
+          {`/`}
+        </span>
+        <Link href="/resume">
+          resume
+        </Link>
+        <span>
+          {`/`}
+        </span>
+        <Link href="/print">
+          print
+        </Link>
       </nav>
     </div>
   </Container>
